# sshrsh

./: .gitignore  Cargo.lock.license  Cargo.toml  Cross.toml  cog.toml  default.nix  flake.lock.license  flake.nix  gamebox.nix  sshrsh.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci-debug-builds-linux.yml  ci-debug-builds.yml  ci-nix-pm-tests.yml  ci-release-builds-linux.yml  ci-releases.yml  ci-tests-linux.yml  ci-tests.yml  clean-old-workflow-runs.yml  update-flatpak-cargo-file.yml  verify-pr-commit.yml  verify-reuse-compliance.yml
src/: main.rs
