# SPDX-FileCopyrightText: 2024 Dom 'shymega' Rodriguez

# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsshsh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsshsh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"

