# SPDX-FileCopyrightText: 2024 Dom 'shymega' Rodriguez

# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsshsh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsshsh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"

