# SPDX-FileCopyrightText: 2024 Dom 'shymega' Rodriguez

# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsshsh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsshsh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"

